[gd_scene load_steps=9 format=2]

[ext_resource path="res://DesignDocs/BugList.gd" type="Script" id=1]
[ext_resource path="res://GUI/Icons/checkbox.png" type="Texture" id=2]
[ext_resource path="res://GUI/Icons/FileFolder.png" type="Texture" id=3]
[ext_resource path="res://GUI/Icons/FloppyDisk.png" type="Texture" id=4]
[ext_resource path="res://GUI/Icons/down arrow.svg" type="Texture" id=5]
[ext_resource path="res://GUI/Icons/up arrow.svg" type="Texture" id=6]
[ext_resource path="res://GUI/Icons/delete icon.svg" type="Texture" id=7]
[ext_resource path="res://GUI/Icons/pencil.svg" type="Texture" id=8]

[node name="DesignNotes" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -10.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
CheckMarkButtonTex = ExtResource( 2 )
DeleteIconTex = ExtResource( 7 )
UpArrowTex = ExtResource( 6 )
DownArrowTex = ExtResource( 5 )
PencilTex = ExtResource( 8 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 1024.0
margin_bottom = 590.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBox" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 1024.0
margin_bottom = 37.0

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer/HBox"]
margin_right = 159.0
margin_bottom = 37.0

[node name="LeftHBox" type="HBoxContainer" parent="VBoxContainer/HBox/PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 152.0
margin_bottom = 30.0

[node name="Label" type="Label" parent="VBoxContainer/HBox/PanelContainer/LeftHBox"]
margin_top = 4.0
margin_right = 86.0
margin_bottom = 18.0
text = "Grouping By: "

[node name="GroupingLabel" type="Label" parent="VBoxContainer/HBox/PanelContainer/LeftHBox"]
margin_left = 90.0
margin_top = 4.0
margin_right = 145.0
margin_bottom = 18.0
text = "Category"

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer/HBox"]
margin_left = 163.0
margin_right = 872.0
margin_bottom = 37.0
size_flags_horizontal = 3

[node name="NewBugButton" type="Button" parent="VBoxContainer/HBox/CenterContainer"]
margin_left = 314.0
margin_top = 8.0
margin_right = 394.0
margin_bottom = 28.0
text = "+ New Bug"

[node name="RightHBox" type="HBoxContainer" parent="VBoxContainer/HBox"]
margin_left = 876.0
margin_right = 1024.0
margin_bottom = 37.0
size_flags_vertical = 9
alignment = 2

[node name="SaveButton" type="Button" parent="VBoxContainer/HBox/RightHBox"]
margin_right = 43.0
margin_bottom = 37.0
icon = ExtResource( 4 )

[node name="LoadButton" type="Button" parent="VBoxContainer/HBox/RightHBox"]
margin_left = 47.0
margin_right = 90.0
margin_bottom = 37.0
icon = ExtResource( 3 )

[node name="Button" type="Button" parent="VBoxContainer/HBox/RightHBox"]
margin_left = 94.0
margin_right = 148.0
margin_bottom = 37.0
text = "Return"

[node name="BuglistPanel" type="PanelContainer" parent="VBoxContainer"]
margin_top = 41.0
margin_right = 1024.0
margin_bottom = 590.0
rect_min_size = Vector2( 400, 300 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Dialogs" type="CenterContainer" parent="."]
margin_right = 1024.0
margin_bottom = 590.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EditBugPopup" type="PopupDialog" parent="Dialogs"]
visible = true
margin_left = 262.0
margin_top = 145.0
margin_right = 762.0
margin_bottom = 445.0
rect_min_size = Vector2( 500, 300 )
popup_exclusive = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="Dialogs/EditBugPopup"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Dialogs/EditBugPopup/MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 490.0
margin_bottom = 290.0
custom_constants/separation = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buttons" type="HBoxContainer" parent="Dialogs/EditBugPopup/MarginContainer/VBoxContainer"]
margin_right = 480.0
margin_bottom = 20.0

[node name="SaveBugBtn" type="Button" parent="Dialogs/EditBugPopup/MarginContainer/VBoxContainer/Buttons"]
margin_right = 98.0
margin_bottom = 20.0
text = "Save Changes"

[node name="CenterContainer" type="CenterContainer" parent="Dialogs/EditBugPopup/MarginContainer/VBoxContainer/Buttons"]
margin_left = 102.0
margin_right = 393.0
margin_bottom = 20.0
size_flags_horizontal = 3

[node name="DiscardBugBtn" type="Button" parent="Dialogs/EditBugPopup/MarginContainer/VBoxContainer/Buttons/CenterContainer"]
margin_left = 87.0
margin_right = 204.0
margin_bottom = 20.0
text = "Discard Changes"

[node name="DeleteBugBtn" type="Button" parent="Dialogs/EditBugPopup/MarginContainer/VBoxContainer/Buttons"]
margin_left = 397.0
margin_right = 480.0
margin_bottom = 20.0
text = "Delete Bug"
align = 2

[node name="BugEditTree" type="Tree" parent="Dialogs/EditBugPopup/MarginContainer/VBoxContainer"]
margin_top = 30.0
margin_right = 480.0
margin_bottom = 280.0
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 2

[node name="LoadDialog" type="FileDialog" parent="Dialogs"]
margin_left = 262.0
margin_top = 145.0
margin_right = 762.0
margin_bottom = 445.0
rect_min_size = Vector2( 500, 300 )
popup_exclusive = true
window_title = "Open a File"
resizable = true
mode = 0
access = 1
current_dir = "user://"
current_path = "user://"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SaveDialog" type="FileDialog" parent="Dialogs"]
margin_left = 262.0
margin_top = 145.0
margin_right = 762.0
margin_bottom = 445.0
rect_min_size = Vector2( 500, 300 )
popup_exclusive = true
window_title = "Save Buglist"
resizable = true
access = 1
current_dir = "user://"
current_path = "user://"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="VBoxContainer/HBox/CenterContainer/NewBugButton" to="." method="_on_NewBugButton_pressed"]
[connection signal="pressed" from="VBoxContainer/HBox/RightHBox/SaveButton" to="." method="_on_SaveButton_pressed"]
[connection signal="pressed" from="VBoxContainer/HBox/RightHBox/LoadButton" to="." method="_on_LoadButton_pressed"]
[connection signal="pressed" from="VBoxContainer/HBox/RightHBox/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Dialogs/EditBugPopup/MarginContainer/VBoxContainer/Buttons/SaveBugBtn" to="." method="_on_SaveBugBtn_pressed"]
[connection signal="pressed" from="Dialogs/EditBugPopup/MarginContainer/VBoxContainer/Buttons/CenterContainer/DiscardBugBtn" to="." method="_on_DiscardBugBtn_pressed"]
[connection signal="pressed" from="Dialogs/EditBugPopup/MarginContainer/VBoxContainer/Buttons/DeleteBugBtn" to="." method="_on_DeleteBugBtn_pressed"]
[connection signal="file_selected" from="Dialogs/LoadDialog" to="." method="_on_LoadDialog_file_selected"]
[connection signal="file_selected" from="Dialogs/SaveDialog" to="." method="_on_SaveDialog_file_selected"]
